--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.koma-im.koma</groupId>
+    <groupId>io.github.koma-im</groupId>
     <artifactId>koma-library</artifactId>
     <packaging>jar</packaging>
-    <version>0.7.4.12</version>
+    <version>0.7.4.13</version>
     <name>koma-library</name>
     <dependencies>
         <dependency>
@@ -71,7 +71,7 @@
         </dependency>
     </dependencies>
     <properties>
-        <kotlin.version>1.3.10</kotlin.version>
+        <kotlin.version>1.3.11</kotlin.version>
         <moshi.version>1.8.0</moshi.version>
         <retrofit.version>2.5.0</retrofit.version>
         <kotlinx.coroutine.version>1.0.1</kotlinx.coroutine.version>
@@ -120,7 +120,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-		<version>3.7.0</version>
+                <version>3.7.0</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -141,6 +141,18 @@
                     <source>9</source>
                     <target>9</target>
                 </configuration>
+            </plugin>
+            <plugin>  <!-- Create sources.jar -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
