--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,15 @@ sourceSets {
     }
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11'
     compileOnly 'org.jetbrains.kotlin:kotlin-reflect:1.3.11'
