--- a/build.gradle
+++ b/build.gradle
@@ -45,12 +45,15 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.5.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.5.0'
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
     compile 'com.github.kittinunf.result:result:2.0.0'
     compile 'io.github.microutils:kotlin-logging:1.6.22'
     compile 'org.slf4j:slf4j-api:1.8.0-beta2'
     compile 'org.jetbrains.kotlin:kotlin-test:1.3.11'
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
+
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
 }
 
 group = 'io.github.koma-im'
