--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'java'
     id 'maven'
     id "org.jetbrains.kotlin.jvm" version "1.3.11"
-    id "org.jetbrains.kotlin.kapt" version "1.3.20"
+    id "org.jetbrains.kotlin.kapt" version "1.3.21"
 }
 
 repositories {
@@ -54,9 +54,10 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testRuntime 'org.slf4j:slf4j-simple:1.8.0-beta2'
 }
 
 group = 'io.github.koma-im'
-version = '0.7.8'
+version = '0.7.9'
 description = 'koma-library'
 sourceCompatibility = '9'
